--- a/pages/changeMode.html
+++ b/pages/changeMode.html
@@ -66,7 +66,7 @@
                             $("#main").html("本地更改撤销成功！<br>正在切换分支（可能需要较长时间）...<br>（运行命令：git checkout master）...");
                             upd();
                             setTimeout(() => {
-                                piapi.runCmd("git checkout web", function(res){
+                                piapi.runCmd("git checkout master", function(res){
                                     setTimeout(() => {
                                         $("#main").html("切换分支完毕！正在重启软件...<br>git的输出结果为：<br>"+res.data);
                                         upd();
