--- a/pages/changeMode.html
+++ b/pages/changeMode.html
@@ -8,15 +8,6 @@
     <link rel="stylesheet" href="./src/paper.css">
     <title>切换分支</title>
     <style>
-        #head {
-            border-bottom: 1px solid black;
-            background: white;
-            /*fixed-top*/
-            position: fixed;
-            top: 0;
-            width: 100%;
-        }
-
         #main {
             font-family: px12;
             font-size: 12px;
@@ -25,7 +16,7 @@
 </head>
 
 <body>
-    <div id="head">
+    <div class="head-fixed-top">
         <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> E-Ink UI 切换分支</span>
     </div>
     <div class="container mt-4">
