--- a/pages/yiyan.html
+++ b/pages/yiyan.html
@@ -19,7 +19,7 @@
     <div class="container">
         <br>
         <div id="yiyan" class="text-center">一言 加载中...</div>
-        <div id="yiyanfrom" style="text-align: right;"></div>
+        <div id="yiyanfrom" style="text-align: right;">——xuanzhi33「E-Ink UI」</div>
     </div>
     <script src="./src/jquery.min.js"></script>
     <script src="./src/piapi.js"></script>
