UI上的小变动

--- a/pages/main.html
+++ b/pages/main.html
@@ -102,7 +102,7 @@
             $("#net").html('<i class="fa fa-wifi" aria-hidden="true"></i> Online');
         }
         function whenOffline() {
-            $("#net").html('Offline');
+            $("#net").html('× Offline');
         }
         if (navigator.onLine) {
             whenOnline();
