--- a/pages/changeMode.html
+++ b/pages/changeMode.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="head-fixed-top">
-        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> E-Ink UI 切换分支</span>
+        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> E-Ink UI 切换到Master分支</span>
     </div>
     <div class="container mt-4">
 
