标题上的小改动

--- a/pages/note.html
+++ b/pages/note.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="head">
-        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> 记事本</span>
+        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> 简单记事本（Beta）</span>
     </div>
     <div class="container">
         <p id="main">点击输入文字...</p>
