--- a/pages/power.html
+++ b/pages/power.html
@@ -18,7 +18,7 @@
 
 <body>
     <div class="head-fixed-top">
-        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> 电源选项</span>
+        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> 设备电源选项</span>
     </div>
     <div class="container mt-4">
         <div class="row">
