--- a/pages/terminal.html
+++ b/pages/terminal.html
@@ -20,7 +20,7 @@
 
 <body>
     <div class="head-fixed-top">
-        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> 终端</span>
+        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> 简单终端</span>
     </div>
     <div class="container mt-4">
         <div id="result" class="mb-1"></div>
