--- a/pages/update.html
+++ b/pages/update.html
@@ -17,7 +17,7 @@
 
 <body>
     <div class="head-fixed-top">
-        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> E-Ink UI 软件更新</span>
+        <span><a id="backBtn" href="javascript:backToMain()">&nbsp;&lt;</a> E-Ink UI Web 软件更新</span>
     </div>
     <div class="container mt-4">
 
