新增网络信息

--- a/pages/main.html
+++ b/pages/main.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-    <div class="container text-center">
-        <div><span id="net"></span>&emsp;<span id="time">00:00</span>&emsp;@xuanzhi33</div>
+    <div class="text-center head-fixed-top">
+        <span id="net"></span>&emsp;<span id="time">00:00</span>&emsp;@xuanzhi33
+    </div>
+    <div class="container text-center mt-4">
         <div class="mb-1">
             <button id="reader"><i class="fa fa-book" aria-hidden="true"></i> 阅读</button>
             <button id="weather"><i class="fa fa-cloud" aria-hidden="true"></i> 天气</button>
