--- a/pages/netInfo.html
+++ b/pages/netInfo.html
@@ -11,10 +11,16 @@
 
 <body>
     <div class="head-fixed-top">
-        <span><a href="javascript:backToMain()">&nbsp;&lt;</a> 标题</span>
+        <span><a href="javascript:backToMain()">&nbsp;&lt;</a> 网络信息</span>
     </div>
     <div class="container mt-4">
-
+        <div>
+            IP地址：<span id="ipAddr">正在获取中...</span>
+        </div>
+        <div>
+            附近的Wi-Fi：<span id="wifi">正在获取中...</span>
+        </div>
+        <button id="refresh" class="mt-2 mb-2">刷新</button>
     </div>
     <script src="./src/jquery.min.js"></script>
     <script src="./src/piapi.js"></script>
@@ -27,6 +33,25 @@
         }
         upd();
         $(window).scroll(upd);
+
+
+        $("#refresh").click(function() {
+            location.reload();
+        });
+
+        setTimeout(function () {
+                piapi.getInfo(function (data) {
+
+                    data = JSON.parse(data.data);
+    
+                    $("#ipAddr").text(data.ip);
+                    $("#wifi").text(data.WIFI);
+                
+                    setTimeout(() => {
+                        upd();
+                    }, 200);
+                })
+        }, 1500);
 
     </script>
 </body>
