--- a/pages/settings.html
+++ b/pages/settings.html
@@ -46,6 +46,9 @@
         $("#netInfo").click(function(){
             location.href = "./netInfo.html";
         })
+        $("#about").click(function(){
+            location.href = "./about.html";
+        })
     </script>
 </body>
 
