修复主界面

--- a/pages/main.html
+++ b/pages/main.html
@@ -21,12 +21,12 @@
             <button id="clock"><i class="fa fa-clock-o" aria-hidden="true"></i> 时钟</button>
         </div>
         <div class="mb-1">
-            <button id="date"><i class="fa fa-calendar" aria-hidden="true"></i> 日期钟</button>
+            <button id="date"><i class="fa fa-calendar" aria-hidden="true"></i> 日期</button>
             <button id="tomato"><i class="fa fa-hourglass" aria-hidden="true"></i> 番茄钟</button>
             <button id="yiyan"><i class="fa fa-sticky-note-o" aria-hidden="true"></i> 一言</button>
         </div>
         <div class="mb-1">
-            <button id="calc"><i class="fa fa-calculator" aria-hidden="true"></i> 计算器</button>
+            <button id="calc"><i class="fa fa-calculator" aria-hidden="true"></i> 计算</button>
             <button id="random"><i class="fa fa-random" aria-hidden="true"></i> 随机数</button>
             <button id="2048"><i class="fa fa-gamepad" aria-hidden="true"></i> 2048</button>
         </div>
